<resources>
    <string name="app_name">Social application</string>
    <string name="email">Електронна пошта</string>
    <string name="password">Пароль</string>
    <string name="show_password">Показати пароль</string>
    <string name="sign_in">Увійти</string>
    <string name="auth_failed">Помилка аутентифікації</string>
    <string name="confirm_password">Підтвердити пароль</string>
    <string name="full_name">Повне ім\'я</string>
    <string name="sign_up">Зареєструватися</string>
    <string name="do_not_have_account">Не маєте облікового запису? Зареєструйтесь</string>
    <string name="or">або</string>
    <string name="reset_password">Відновити пароль</string>
    <string name="auth">Авторизуйтесь</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_posts">Новини</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_friends">Друзі</string>
    <string name="menu_tools">Tools</string>
    <string name="share">Поділитися</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Відправити</string>
    <string name="quit">Вийти</string>
    <string name="menu_albums">Альбоми</string>
    <string name="like">Подобається</string>
    <string name="comments">Коментарі</string>
    <string name="change_photo">Змінити фото</string>
    <string name="lastName">Повне ім\'я</string>
    <string name="username">User name</string>
    <string name="phone">Телефон</string>
    <string name="address">Адреса</string>
    <string name="website">Веб-сайт</string>
    <string name="company">Компанія</string>

</resources>
